--- a/src/system/styles/common.scss
+++ b/src/system/styles/common.scss
@@ -1,14 +1,5 @@
-<template>
-  <div id="app">
-    <div id="nav">
-      <router-link to="/">Home</router-link> |
-      <router-link to="/about">About</router-link>
-    </div>
-    <router-view />
-  </div>
-</template>
+@import "./normalize.scss";
 
-<style lang="scss">
 #app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -29,4 +20,3 @@
     }
   }
 }
-</style>
